--- a/Agile Methodology/.classpath
+++ b/Agile Methodology/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Courses/Spring 2017/SSW-555/jars/gedcom4j-4.0.1_0.jar"/>
 	<classpathentry kind="lib" path="C:/Courses/Spring 2017/SSW-555/jars/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Courses/Spring 2017/SSW-555/jars/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Courses/Spring 2017/SSW-555/jars/junit-4.12.jar" sourcepath=""/>
 	<classpathentry kind="lib" path="C:/Courses/Spring 2017/SSW-555/jars/postgresql-9.4.1212.jre6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
